fix z-index

--- a/common.scss
+++ b/common.scss
@@ -11,6 +11,10 @@
   color: #f44336;
 }
 
+.background-red {
+  background: #f44336 !important;
+}
+
 .light-green-color {
   color: #d2be0e;
 }
