--- a/index.scss
+++ b/index.scss
@@ -10,6 +10,7 @@ html {
   top: 0;
   left: 0;
   position: fixed;
+  z-index: 999;
   background: rgba(0, 0, 0, 0.5);
   width: 100vw;
   height: 100vh;
